 addressable-ring.bsv      Locally Modified          526 

(1) Add an atomic test&set operation for coherent scratchpads.
(2) Fix a bug inside the coherent scratchpad controller that causes deadlocks.
(3) The original addressable ring only supports single source or single sink configuration. 
    Add a new addressable ring implementation that supports N sources and N sinks using two
    broadcast chains to avoid circular dependencies.

----------
mcadler     Date: Tue Feb 11 08:12:18 EST 2014  CSN: CSN-leap-528
                  Tue Feb 11 13:12:18 UTC 2014


Directory modules/leap/libraries/librl/base
 valid.bsv                 Locally Added               0 
 librl-bsv-base.awb        Locally Modified          527 

Add toValid() and toValidM() -- convenience functions for promoting objects
to tagged Valid.  These can be used with map/mapM, among other things.

----------
keflemin    Date: Wed Feb 12 19:47:52 EST 2014  CSN: CSN-leap-529
                  Thu Feb 13 00:47:52 UTC 2014


Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-hybrid-vexe.apm   Locally Added               0 

Directory modules/leap/build-support/build-pipelines/stages/verilog
 verilog.py                Locally Modified          528 

Directory modules/leap/build-support/build-pipelines/stages/wrapper_gen
 wrapper_gen.py            Locally Modified          528 

Directory modules/leap/build-support/build-pipelines/pipelines/verilog
 VerilogPipeline.py        Locally Modified          528 


Resurrected verilog compilation flow. I tested the flow on both
iverilog and vcs.  Currently, only iverilog support is enabled. vcs
support is contingent on resolving a webcase with synopsis.

----------
keflemin    Date: Thu Feb 13 10:00:37 EST 2014  CSN: CSN-leap-530
                  Thu Feb 13 15:00:37 UTC 2014


Directory scripts/bmark
 run.bmark                 Locally Modified          529 


Verilog builds require a little extra environment. 