@@ -85,17 +85,20 @@ class Verilog():
     # simulator does not support shared library search paths.  The
     # current wrapper only works for iverilog.  Due to brokeness in
     # the iverilog argument parser, we must construct a correct
-    # iverilog command line by analyzing its compiled script. 
+    # iverilog command line by analyzing its compiled script. Also,
+    # this script is not passing through the arguments that it should
+    # be passing through. 
     def generate_vexe_wrapper(target, source, env):
         print "Target: " + str(target[0]) + "\n"
         wrapper_handle = open(str(target[0]),'w')
         wrapper_handle.write('#!/usr/bin/perl\n')
         wrapper_handle.write('# generated by verilog.py\n') 
-        wrapper_handle.write('@script = `cat ' + TMP_BSC_DIR + '/' + APM_NAME + '_hw.exe' + '`;\n')   
+        wrapper_handle.write('$platform = $ENV{"PLATFORM_DIRECTORY"};\n')
+        wrapper_handle.write('@script = `cat $platform/' + TMP_BSC_DIR + '/' + APM_NAME + '_hw.exe' + '`;\n')   
         wrapper_handle.write('$script[0] =~ s/#!/ /g;\n')
         wrapper_handle.write('$vvp = $script[0];\n')
         wrapper_handle.write('chomp($vvp);\n')
-        wrapper_handle.write('`$vvp -m$ENV{"PLATFORM_DIRECTORY"}/directc_mk_model_Wrapper.so ' + TMP_BSC_DIR + '/' + APM_NAME + '_hw.exe' + ' +bscvcd \$* `;\n')
+        wrapper_handle.write('exec("$vvp -m$platform/directc_mk_model_Wrapper.so $platform/' + TMP_BSC_DIR + '/' + APM_NAME + '_hw.exe' + ' +bscvcd \$* ");\n')
         wrapper_handle.close()
       
 
